# Grading-Analysis-Tool

./: FordhamProcessor.py  README.md  Tool.py  dictionary.py  edmTool.py  everyCodeSoFar.py  gradeAnalysisFunc.py  gradeAnalysisGUI.py  gradeAnalysisWidgets.py  grading_anomalies_analysis.ipynb  grading_anomalies_analysis_1103.ipynb  pyproject.toml  requirements.txt  s1FordhamProcessor.py  s2CreateTables.py  s3Tool.py  setup.py  test_data_creation.py  tkinterapp.desktop  updated_05_23.ipynb  wo1103.ipynb  wo1103_v2.ipynb  wo1103_v3
src/: gradeAnalysisWidgets.py
src/grade-analysis/: dictionary.py  gradeAnalysisGUI.py
src/grade_analysis/: gradeAnalysisFunc.py  gradeAnalysisGUI.py  gradeAnalysisWidgets.py
